fixed z-index

--- a/dummies/less/styles.less
+++ b/dummies/less/styles.less
@@ -139,6 +139,7 @@ aside {
 	background: @badgeBg;
 	padding: (@line / @em) (@badgePaddingHorizontal / @em);
 	position: fixed;
+	z-index: 100;
 
 	// Logo
 	> a {
